crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__sarif__tests__output_as_severity_none.snap
---
source: crates/fortitude_linter/src/diagnostics/message/sarif.rs
expression: content
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "fortitude",
          "informationUri": "https://github.com/PlasmaFAIR/fortitude",
          "rules": [
            {
              "id": "PORT021",
              "shortDescription": {
                "text": "'{dtype}{size}' uses non-standard syntax"
              },
              "fullDescription": {
                "text": "## What it does\nChecks for non-standard kind specifiers such as `int*4` or `real*8`\n\n## Why is this bad?\nTypes such as 'real*8' or 'integer*4' are not standard Fortran and should be\navoided. For these cases, consider instead using 'real(real64)' or\n'integer(int32)', where 'real64' and 'int32' may be found in the intrinsic\nmodule 'iso_fortran_env'. You may also wish to determine kinds using the\nbuilt-in functions 'selected_real_kind' and 'selected_int_kind'.\n\nFixes to this rule are considered unsafe, as while `dtype*N` is generally\nunderstood to mean a `dtype` that occupied `N` bytes, this does not necessarily\ncorrespond to `dtype(N)`, which is a `dtype` of 'kind' `N`. For example, the NAG\ncompiler may be configured to use a sequential kind system in which `real*8`\ncorresponds to `real(2)`\n\nIn a future version, we hope to upgrade this to a safe fix by use of parameters\nin `iso_fortran_env`, as `real*8` should always correspond to `real(real64)`.\n"
              },
              "help": {
                "text": "'{dtype}{size}' uses non-standard syntax"
              },
              "properties": {
                "id": "PORT021",
                "kind": "Portability",
                "name": "star-kind",
                "problem.severity": "note"
              }
            },
            {
              "id": "S061",
              "shortDescription": {
                "text": "end statement should be named."
              },
              "fullDescription": {
                "text": "## What does it do?\nChecks that `end` statements include the type of construct they're ending\n\n## Why is this bad?\nEnd statements should specify what kind of construct they're ending, and the\nname of that construct. For example, prefer this:\n\n```f90\nmodule mymodule\n  ...\nend module mymodule\n```\n\nTo this:\n\n```f90\nmodule mymodule\n  ...\nend\n```\n\nOr this:\n\n```f90\nmodule mymodule\n  ...\nend module\n```\n\nSimilar rules apply for many other Fortran statements\n"
              },
              "help": {
                "text": "end statement should be named."
              },
              "properties": {
                "id": "S061",
                "kind": "Style",
                "name": "unnamed-end-statement",
                "problem.severity": "note"
              }
            },
            {
              "id": "S201",
              "shortDescription": {
                "text": "'implicit none' set on the enclosing {entity}"
              },
              "fullDescription": {
                "text": "## What it does\nChecks for unnecessary `implicit none` in module procedures\n\n## Why is this bad?\nIf a module has 'implicit none' set, it is not necessary to set it in contained\nfunctions and subroutines (except when using interfaces).\n"
              },
              "help": {
                "text": "'implicit none' set on the enclosing {entity}"
              },
              "properties": {
                "id": "S201",
                "kind": "Style",
                "name": "superfluous-implicit-none",
                "problem.severity": "note"
              }
            }
          ],
          "version": "0.1.0"
        }
      },
      "results": [
        {
          "level": "warning",
          "message": {
            "text": "'implicit none' set on the enclosing module"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "file:///home/eduard/Git/fortitude/crates/fortitude_linter/test.f90"
                },
                "region": {
                  "startLine": 6,
                  "startColumn": 5,
                  "endLine": 6,
                  "endColumn": 18
                }
              }
            }
          ],
          "ruleId": "S201"
        },
        {
          "level": "warning",
          "message": {
            "text": "end statement should read 'end subroutine foo'"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "file:///home/eduard/Git/fortitude/crates/fortitude_linter/test.f90"
                },
                "region": {
                  "startLine": 7,
                  "startColumn": 3,
                  "endLine": 7,
                  "endColumn": 17
                }
              }
            }
          ],
          "ruleId": "S061"
        },
        {
          "level": "warning",
          "message": {
            "text": "integer*4 is non-standard, use integer(4)"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "file:///home/eduard/Git/fortitude/crates/fortitude_linter/star_kind.f90"
                },
                "region": {
                  "startLine": 1,
                  "startColumn": 8,
                  "endLine": 1,
                  "endColumn": 9
                }
              }
            }
          ],
          "ruleId": "PORT021"
        }
      ]
    }
  ]
}
